# manifestor

./: .gitignore  Cargo.toml
src/: main.rs
